Closed Bug 312231 Opened 20 years ago Closed 20 years ago

Schema Validation returns an error for empty values, which is wrong

Categories

(Core Graveyard :: XForms, defect)

x86
All
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: doronr, Assigned: doronr)

Details

(Keywords: fixed1.8)

Attachments

(1 file)

Attached patch patchSplinter Review
Empty value is a valid xsd:string, so don't fail on it.
Attachment #199350 - Flags: superreview?(peterv)
Attachment #199350 - Flags: superreview?(peterv)
Attachment #199350 - Flags: superreview+
Attachment #199350 - Flags: review+
Comment on attachment 199350 [details] [diff] [review] patch a=mkaply
Attachment #199350 - Flags: approval1.8rc1+
checked into trunk
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Keywords: fixed1.8
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: