Bug 312231 - Schema Validation returns an error for empty values. r/sr=peterv